tests-trybuild/tests/riscv-rt/entry/fail_return_empty.rs
#[riscv_rt::entry]
fn entry_point() {}

fn main() {}
